# mips

./: Cargo.toml  README.md
assembler/: README.md
assembler/src/: header.rs  instruction.rs  lib.rs  parser.rs
compiler/: Cargo.toml
compiler/src/: lib.rs  node.rs  token.rs
emulator/: Cargo.toml  README.md
emulator/src/: emu.rs  lib.rs  register.rs
mips-assembler/: .gitignore  Cargo.toml  README.md
mips-assembler/src/: instruction.rs  lib.rs  parser.rs
mips-emu/: .gitignore
mips-emu/src/: decode.rs  emu.rs  lib.rs
src/: lib.rs
tests/: case1.s  case3.s  integrated.rs  main.rs
tests/assemble_to_emulate/: 001_addi_addu.s  002_label.s  003_loop.s  004_data.s  005_slt.s  006_mul.s  007_div.s  008_shift.s  009_space.s  010_ori.s  case2.s  mod.rs
tests/compile_to_emulate/: 003_tokenize.lzy  mod.rs
