[package]
name = "mips"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mips-assembler]
path = "./assembler"

[dependencies.mips-emulator]
path = "./emulator"

[dependencies.mips-compiler]
path = "./compiler"
