[package]
name = "mips"
version = "0.1.0"
edition = "2021"
default-run = "mips"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "mips"
path = "./src/bin/main.rs"


[dependencies.mips-assembler]
path = "./assembler"

[dependencies.mips-emulator]
path = "./emulator"

[dependencies.mips-compiler]
path = "./compiler"
