[package]
name = "mips-assembler"
version = "0.1.0"
edition = "2021"
default-run = "mimi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "mimi"
path = "src/bin/main.rs"
